--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ li{
     list-style: none;
     margin: 0% auto;
     padding: 10px;
-    width: 250px;
+    /* width: 500px; */
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
 
@@ -23,7 +23,7 @@ li{
     /* justify-content: center;
     justify-items: center; */
     max-width: 750px;
-    /* width: 100%; */
+    width: 100%;
     background-color: bisque;
     margin: 20% auto;
     padding: 0%;
@@ -40,6 +40,7 @@ li{
     display: flex;
     justify-content: center;
     padding: 10px;
+    margin: 10px;
 }
 
 .formInp{
@@ -83,3 +84,9 @@ li{
     background-color: green;
     color: aliceblue;
 }
+
+.listbox{
+ padding: 0 0 20px 0;
+ /* width: 100%; */
+}
+
